Changes to index.html

--- a/PLPlayersAPI/wwwroot/index.html
+++ b/PLPlayersAPI/wwwroot/index.html
@@ -50,7 +50,7 @@
             <h1>Football Players API</h1>
             <p>
                 The API offers information on players, clubs, nationalities, and positions from the English
-                Premier League. <br> Hosted on an AWS EC2 instance as a Docker container, it uses AWS RDS for data storage.
+                Premier League. <br> Deployed as an Azure Web App, it uses Azure SQL Database for data storage.
             </p>
 
             <h4>Available resources:</h4>
